src/test/deca/syntax/invalid/provided/if_invalide.deca
{
if(7>5{
print(true);
}
}
